--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dompurify": "^3.0.5",
     "express": "^4.18.2"
   },
   "name": "mandatory_i",
@@ -7,7 +8,6 @@
   "type": "module",
   "version": "0.0.1",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
