--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
   "bugs": {
     "url": "https://github.com/ThomasSA-Git/MandatoryI-Node.js/issues"
   },
-  "homepage": "https://github.com/ThomasSA-Git/MandatoryI-Node.js#readme"
+  "homepage": "https://github.com/ThomasSA-Git/MandatoryI-Node.js#readme",
+  "vercel": {
+    "functions": {
+      "api/**/*.js": {
+        "runtime": "node@14"
+      }
+    }
+  }
 }
